logs/django-cherrypy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cherrypy_wsgiserver-0.1.dev0.egg-info'...
Listing './lib/python3.5/site-packages/django_cherrypy'...
Listing './lib/python3.5/site-packages/django_cherrypy/management'...
Listing './lib/python3.5/site-packages/django_cherrypy/management/commands'...
Compiling './lib/python3.5/site-packages/django_cherrypy/management/commands/runcpserver.py'...
***   File "./lib/python3.5/site-packages/django_cherrypy/management/commands/runcpserver.py", line 135
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_cherrypy/management/commands/runserver_cp.py'...
***   File "./lib/python3.5/site-packages/django_cherrypy/management/commands/runserver_cp.py", line 43
    print "Validating models..."
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/django_cherrypy-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/wsgiserver'...
Compiling './lib/python3.5/site-packages/wsgiserver/__init__.py'...
***   File "./lib/python3.5/site-packages/wsgiserver/__init__.py", line 603
    except ValueError, ex:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wsgiserver/ssl_builtin.py'...
***   File "./lib/python3.5/site-packages/wsgiserver/ssl_builtin.py", line 43
    except ssl.SSLError, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wsgiserver/ssl_pyopenssl.py'...
***   File "./lib/python3.5/site-packages/wsgiserver/ssl_pyopenssl.py", line 70
    except SSL.SysCallError, e:
                           ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
